atualização da Tela de Cadastro

--- a/accounts/templates/pages/register.html
+++ b/accounts/templates/pages/register.html
@@ -23,17 +23,17 @@
                     </div>
                     <div class="mb-3">
                         <label for="email" class="form-label">Email</label>
-                        <input type="text" class="form-control" name="email" placeholder="Digite seu usuário">
+                        <input type="text" class="form-control" name="email" placeholder="Digite seu email">
                     </div>
                     <div class="mb-3">
                         <label for="password" class="form-label">Senha</label>
                         <input type="password" class="form-control" name="password" placeholder="Digite sua senha">
                     </div>
                     <div class="mb-3">
-                        <label for="password-again" class="form-label">Repita sua Senha</label>
-                        <input type="password-again" class="form-control" name="password_again" placeholder="Digite sua senha">
+                        <label for="repeat-password" class="form-label">Repita sua Senha</label>
+                        <input type="repeat-password" class="form-control" name="repeat-password" placeholder="Repita sua senha">
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block">Entrar</button>
+                    <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
                 </form>
             </div>
         </div>
